[package]
name = "p2p_file_sharer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "time", "sync", "net", "io-util"] }
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
crossterm = "0.27"
ipnetwork = "0.21.1"
bincode = { version = "2.0.1", features = ["derive", "serde"] }
local-ip-address = "0.6.5"
blake3 = "1.8.2"